--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
   "version": 2,
-
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/**.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/server.js"
-    }
-  ]
+  },
+  "routes": {
+    "/api/popular": "/api/popular.js"
+  }
 }
