--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/**.js": {
-      "runtime": "nodejs18.x"
+  "routes": [
+    {
+      "src": "/popular",
+      "dest": "/api/popular"
     }
-  },
-  "routes": {
-    "/api/popular": "/api/popular.js"
-  }
+  ]
 }
